project(Leetcode)

cmake_minimum_required(VERSION 2.8.3)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(Longest_Palindromic_Substring)
add_subdirectory(ZigZag_Conversion)
add_subdirectory(Reverse_Integer)
add_subdirectory(String_to_Integer)
add_subdirectory(Range_Sum_Query)
add_subdirectory(House_Robber)